frontend/test/should_fail/yield_expression_only_in_lhs_def_var_initialization.grg
rule foo()
{
	iterated it {
		.;
	---
		def var bar:double = 1;
		
		modify {
		}
	}

	modify {
	---
		def var score:double = yield([?it].extract<bar>().sum());
	}
}
